# ESP32S3forAISoundBox

./: README.md  编译说明.docx
components/audio_board/esp32_s3_korvo2_v3/: board.c  board_def.h
components/audio_board/lyratd_msc_v2_1/: board_def.h
components/audio_hal/driver/es8374/: es8374.h
components/audio_pipeline/: audio_element.c
components/audio_pipeline/include/: audio_event_iface.h
components/audio_recorder/: CMakeLists.txt  audio_recorder.c  recorder_sr.c
components/audio_recorder/include/: audio_recorder.h
components/audio_sal/: audio_mem.c
components/audio_stream/: i2s_stream.c  i2s_stream_idf5.c
components/audio_stream/include/: http_stream.h  i2s_stream.h
components/dueros_service/: duer_profile  dueros_service.c
components/esp-adf-libs/esp_audio/include/: esp_audio.h
components/esp-adf-libs/esp_codec/include/codec/: esp_id3_parse.h
components/esp_actions/: CMakeLists.txt  display_action.c  player_action.c  recorder_action.c
components/esp_actions/include/: player_action.h
components/esp_dispatcher/include/: esp_action_exe_type.h
components/esp_peripherals/lib/adc_button/: adc_button.c
components/wifi_service/blufi_config/: blufi_config.c
components/wifi_service/src/: wifi_service.c
docs/en/design-guide/dev-boards/: board-esp32-lyrat-v4.3.rst  get-started-esp32-lyrat-mini.rst  get-started-esp32-lyrat-v4.2.rst  get-started-esp32-lyrat-v4.rst  get-started-esp32-lyrat.rst  get-started-esp32-lyratd-msc.rst
docs/zh_CN/design-guide/dev-boards/: get-started-esp32-lyrat.rst  get-started-esp32-lyratd-msc.rst
esp-idf-v5.1.3/components/bt/host/bluedroid/api/include/api/: esp_bt_defs.h
esp-idf-v5.1.3/components/driver/test_apps/uart/main/: test_uart.c
esp-idf-v5.1.3/components/freertos/FreeRTOS-Kernel/: tasks.c
esp-idf-v5.1.3/components/freertos/FreeRTOS-Kernel/include/freertos/: task.h
esp-idf-v5.1.3/components/lwip/test_apps/main/: lwip_test.c
esp-idf-v5.1.3/examples/peripherals/i2s/i2s_recorder/main/: CMakeLists.txt
examples/soudBox/: partitions_dueros_example.csv
examples/soudBox/main/: CMakeLists.txt  app_main.c  app_mqtt.c  app_mqtt.h  app_system_info.c  app_system_info.h  app_task.c  app_task.h  audio_setup.c  esp_dispatcher_dueros_app.c
micropython_adf/mod/: audio_recorder.c
tools/audio_tone/: mk_embed_flash.py
